--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+  
 body {
   font-family: Arial, Helvetica, sans-serif;
   min-height: 100vh;
@@ -6,8 +10,21 @@ body {
   margin: 0;
 }
 
-h1 {
-  color: blue;
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 3rem;
+  padding-left: 1rem;
+  background-color: #484cb3;
+  box-shadow: 3px 3px 3px 3px #808080;
+  color: white;
 }
 
 form {
@@ -20,13 +37,17 @@ section {
 
 #userimage {
   border-radius: 50%;
+  height: 2.5rem;
 }
 
-#userinfo {
-  display: flex;
-  flex-direction: row;
+header > ul {
   list-style: none;
-  font-weight: bold;
+  display: flex;
+  align-items: center;
+}
+
+header > ul li {
+  margin-right: 10px;
 }
 
 .loginlogout:hover{
