--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,13 @@
   box-sizing: border-box;
 }
   
-body {
+/* body {
   font-family: Arial, Helvetica, sans-serif;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   margin: 0;
-}
+} */
 
 #root {
   min-height: 100vh;
@@ -52,4 +52,16 @@ header > ul li {
 
 .loginlogout:hover{
   cursor: pointer;
+}
+
+main {
+  flex-grow: 1;
+  min-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#stadiumheader {
+  color: red;
 }
