--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,11 @@ header {
 }
 
 form {
-  color: red;
+  color: rgb(211, 90, 90);
 }
 
 section {
-  color: blue;
+  color: #484cb3;
 }
 
 #userimage {
@@ -63,5 +63,19 @@ main {
 }
 
 #stadiumheader {
-  color: red;
+  color: rgb(211, 90, 90);
+}
+
+input,
+select {
+  width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 0.4rem;
+  color: #484cb3;
+  border: 2px solid #737495;
+  border-radius: 0;
+  outline: none;
+  -webkit-appearance: none;
 }
