--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ form {
 
 section {
   color: #484cb3;
+  border: sol;
 }
 
 #userimage {
@@ -78,4 +79,16 @@ select {
   border-radius: 0;
   outline: none;
   -webkit-appearance: none;
+}
+
+label {
+  display: flex;
+  align-items: center;
+  margin-top: 0.5rem;
+}
+  
+label span {
+  color: rgb(211, 90, 90);
+  width: 4.5rem;
+  padding-right: 7px;
 }
