--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ header {
   height: 3rem;
   padding-left: 1rem;
   background-color: #484cb3;
-  box-shadow: 3px 3px 3px 3px #808080;
+  box-shadow: 3px 3px 3px 3px #aca6a6;
   color: white;
 }
 
@@ -90,10 +90,16 @@ label {
   margin-top: 0.5rem;
 }
   
-label span {
+#stadiumspan {
   color: rgb(211, 90, 90);
   width: 4.5rem;
   padding-right: 7px;
+}
+
+#locationspan {
+  color: rgb(211, 90, 90);
+  width: 4.5rem;
+  padding-right: 4px;
 }
 
 button {
