wip: remove bullet points from stadiuminfo page

--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@ button:hover {
   cursor: pointer;
 }
 
-#stadiuminfo {
-  list-style: none;
+.stadiuminfo {
+  list-style-type: none;
   color: red;
 }
