--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,13 @@
   box-sizing: border-box;
 }
   
-/* body {
+body {
   font-family: Arial, Helvetica, sans-serif;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   margin: 0;
-} */
+}
 
 #root {
   min-height: 100vh;
@@ -124,4 +124,10 @@ button:hover {
 .stadiuminfo {
   list-style-type: none;
   color: red;
+}
+
+.loggedout {
+  display: flex;
+  color: red;
+  text-align: center;
 }
