--- a/src/App.css
+++ b/src/App.css
@@ -126,8 +126,8 @@ button:hover {
   color: red;
 }
 
-.loggedout {
+/* .loggedout {
   display: flex;
   color: blue;
   text-align: center;
-}
+} */
