wip: layout tests

--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@ button:hover {
   cursor: pointer;
 }
 
-.stadiuminfo {
+/* .stadiuminfo {
   list-style-type: none;
   color: red;
 }
@@ -130,4 +130,4 @@ button:hover {
   display: flex;
   color: blue;
   text-align: center;
-}
+} */
