wip: css changes to stadium info

--- a/src/App.css
+++ b/src/App.css
@@ -121,10 +121,10 @@ button:hover {
   cursor: pointer;
 }
 
-.stadiuminfo {
+/* .stadiuminfo {
   list-style-type: none;
   color: red;
-}
+} */
 
 .loggedout {
   display: flex;
